edit too much files

--- a/archives-manage-controller/src/main/resources/doc/接口以及建表规范.md
+++ b/archives-manage-controller/src/main/resources/doc/接口以及建表规范.md
@@ -7,5 +7,5 @@
 档案统计&nbsp;&nbsp;&nbsp;archives&nbsp;&nbsp;&nbsp;arch<br>
 安全中心&nbsp;&nbsp;&nbsp;security&nbsp;&nbsp;&nbsp;sec<br>
 辅助工具&nbsp;&nbsp;&nbsp;tool&nbsp;&nbsp;&nbsp;tool<br>
-通知公告&nbsp;&nbsp;&nbsp;tool&nbsp;notification&nbsp;&nbsp;&nbsp;not<br>
+通知公告&nbsp;notification&nbsp;&nbsp;&nbsp;not<br>
 系统设置&nbsp;&nbsp;&nbsp;system&nbsp;&nbsp;&nbsp;sys
