edit too much files

--- a/archives-manage-controller/src/main/resources/doc/接口以及建表规范.md
+++ b/archives-manage-controller/src/main/resources/doc/接口以及建表规范.md
@@ -1,5 +1,5 @@
 模块名称 接口前缀 表前缀 <br>
-首&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;页&nbsp;&nbsp;&nbsp;index&nbsp;&nbsp;&nbsp;ind<br>
+首&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;页&nbsp;&nbsp;&nbsp;index&nbsp;&nbsp;&nbsp;inx<br>
 个人中心&nbsp;&nbsp;&nbsp;person&nbsp;&nbsp;&nbsp;per<br>
 利用中心&nbsp;&nbsp;&nbsp;make&nbsp;&nbsp;&nbsp;make<br>
 数据中心&nbsp;&nbsp;&nbsp;data&nbsp;&nbsp;&nbsp;data<br>
